[package]
name = "rag-app"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lancedb = "0.14"
arrow-array = "53"
futures = "0.3"
fastembed = "4"
arrow-schema = "53"
pdf_oxide = "0.3"
text-splitter = "0.29.3"
rayon = "1.10"
dotenvy = "0.15"
